Fix alignment

--- a/public/styles.css
+++ b/public/styles.css
@@ -6,20 +6,28 @@
   box-sizing: border-box;
 }
 body {
-  padding: 50px;
+  padding: 10px;
   font-family: "Poppins", sans-serif;
   font-weight: 500;
 }
 a {
   text-decoration: none;
 }
-.top-buttons {
+form {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   flex-wrap: wrap;
   align-items: center;
-  margin-left: 30px;
-  margin-right: 30px;
+  padding-left: 30px;
+  padding-right: 30px;
+}
+.top-buttons {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-items: center;
+  padding-left: 30px;
+  padding-right: 30px;
 }
 button {
   border: none;
@@ -32,8 +40,7 @@ button {
   justify-content: center;
   align-items: center;
   position: relative;
-  left: 50%;
-  transform: translateX(-50%);
+  /* left: 50%; transform: translateX(-50%); */
   height: 60px;
   width: 140px;
   border-radius: 15px;
@@ -63,8 +70,10 @@ button {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  flex-wrap: wrap;
   margin-top: 150px;
   margin-bottom: 150px;
+  max-width: 100%;
 }
 .block {
   display: flex;
@@ -72,8 +81,9 @@ button {
   align-items: center;
   flex-direction: column;
   min-height: 100px;
-  min-width: 200px;
+  min-width: 150px;
   margin: 10px;
+  padding: 10px;
   font-size: 18px;
   font-weight: 600;
   color: #ffffff;
